# Market-Data-Service

./: README.md
market-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
market-service/alembic/: env.py
market-service/alembic/versions/: 001_initial_schema.py
market-service/app/: __init__.py
market-service/app/api/: router.py
market-service/app/brokers/: __init__.py  base.py  factory.py  mock_provider.py  polygon_provider.py
market-service/app/cache/: __init__.py  quote_cache.py  redis_client.py
market-service/app/core/: config.py  logging.py
market-service/app/db/: __init__.py  session.py
market-service/app/dependencies/: __init__.py  container.py  market.py  watchlist.py
market-service/app/events/: __init__.py  market_events.py
market-service/app/exceptions/: __init__.py  base.py  cache.py  handlers.py  kafka.py  market.py
market-service/app/kafka/: __init__.py  consumer.py  producer.py
market-service/app/middleware/: __init__.py  logging.py  user_context.py
market-service/app/models/: __init__.py  market_news.py  symbol.py  watchlist.py
market-service/app/repositories/: __init__.py  market_news_repository.py  symbol_repository.py  watchlist_repository.py
market-service/app/schemas/: __init__.py  common.py  market.py  watchlist.py  websocket.py
market-service/app/services/: __init__.py  market_provider.py  market_service.py  news_service.py  watchlist_service.py
market-service/app/startup/: __init__.py  lifespan.py
market-service/app/tests/: __init__.py  (+8 more)
(+7 files in other folders)
